# AndroidImGui-Input

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sak/imgui_input/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/sak/imgui_input/: SakSu.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/ImGui/: Image.h  imgui.h  imgui_internal.h
app/src/main/cpp/include/ImGui_Image/: ImGui_Image.h
app/src/main/cpp/include/ImGui_Init/: ImGui_Init.h
app/src/main/cpp/include/ImGui_Menu/: ImGui_Menu.h
app/src/main/cpp/include/Tool/: FileUtil.h  JniTool.h  OpenBalls.hpp  log.h  pch.h  timer.h  内存读写.h  结构体.h
app/src/main/cpp/include/WeiYanTool/: Encrypt.h  cJSON.h  weiyan.h
app/src/main/cpp/src/ImGui/: Image.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_android.cpp  imgui_tables.cpp  imgui_widgets.cpp
app/src/main/cpp/src/ImGui_Image/: ImGui_Image.cpp
app/src/main/cpp/src/ImGui_Init/: ImGui_Init.cpp
app/src/main/cpp/src/ImGui_Menu/: ImGui_Menu.cpp
app/src/main/cpp/src/Tool/: FileUtil.cpp  JniTool.cpp
app/src/main/java/com/sak/imgui_input/: ImGuiWindowData.java  MainActivity.java  NativeUtils.java
app/src/main/java/com/sak/imgui_input/FloatingWindow/: EventClass.java  FloatWinService.java  ImGuiWindowData.java  KeyboardView.java  MyCustomView.java  (+4 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sak/imgui_input/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
